# platform-harness-for-codex

./: .gitignore  AGENTS.md  ONBOARDING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
.steering/20260611-coordinate-extraction/: design.md  requirements.md  tasklist.md
.steering/_template/: design.md  requirements.md  tasklist.md
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
prompts/: coordinate_extraction.md
src/coord_prompt_studio/: __init__.py  cli.py
src/coord_prompt_studio/adapters/: __init__.py  codex.py  image_validation.py
src/coord_prompt_studio/domain/: __init__.py  sessions.py
src/coord_prompt_studio/repositories/: __init__.py  session_repository.py
src/coord_prompt_studio/use_cases/: __init__.py  extract_coordinate_prompt.py  list_sessions.py  record_chatgpt_comparison.py
tests/adapters/: test_image_validation.py
tests/domain/: test_sessions.py
tests/repositories/: test_session_repository.py
tests/use_cases/: test_extract_coordinate_prompt.py  test_record_chatgpt_comparison.py
